# etl-rs

./: .dockerignore  .env  .gitignore  Cargo.toml  Makefile  Makefile.toml  README.md  \  config.json  docker-compose.yml  rustfmt.toml
.cargo/: config.toml
benches/: transform_benchmark.rs
configs/: io-config.json
crates/libs/lib-auth/src/: config.rs  pwd.rs  token.rs
crates/libs/lib-auth/src/pwd/: error.rs  scheme.rs
crates/libs/lib-auth/src/pwd/scheme/: error.rs  scheme_01.rs  scheme_02.rs
crates/libs/lib-auth/src/token/: error.rs
crates/libs/lib-core/: Cargo.toml
crates/libs/lib-core/src/: _dev_utils.rs  config.rs  ctx.rs  lib.rs  model.rs
crates/libs/lib-core/src/_dev_utils/: dev_db.rs
crates/libs/lib-core/src/ctx/: error.rs
crates/libs/lib-core/src/model/: agent.rs  base.rs  conv.rs  conv_msg.rs  error.rs  store.rs  user.rs
crates/libs/lib-core/src/model/base/: crud_fns.rs  macro_utils.rs
crates/libs/lib-core/src/model/store/: dbx.rs
crates/libs/lib-core/src/model/store/dbx/: error.rs
crates/libs/lib-data-processing/: Cargo.toml
crates/libs/lib-data-processing/benches/: transform_benchmark.rs
crates/libs/lib-data-processing/configs/: io-config.json
crates/libs/lib-data-processing/examples/: csv_hdd_to_postgres.rs  csv_jdd_to_kafka.rs  csv_jdd_to_postgres.rs  kafka_jdd_to_mongo.rs  simple_kafka_consumer.rs  transform_hdd_deduplication.rs  transform_jdd_normalisation.rs
crates/libs/lib-data-processing/files/: HDD_deduplication_transformed.csv  HDD_deduplication_transformed_test.csv  JDD_normalisation_transformed.csv
crates/libs/lib-data-processing/src/: kafka.rs
crates/libs/lib-data-processing/src/schemas/: hdd.rs
crates/libs/lib-data-processing/src/transforms/: ape.rs  civilite.rs  code_naf.rs  email.rs  libelle_naf.rs  nom.rs  raison_sociale.rs  siret.rs
crates/libs/lib-etl/: Cargo.toml
crates/libs/lib-etl/benches/: transform_benchmark.rs
crates/libs/lib-etl/configs/: io-config.json
crates/libs/lib-etl/examples/: csv_hdd_to_postgres.rs  csv_jdd_to_kafka.rs  csv_jdd_to_postgres.rs  kafka_jdd_to_mongo.rs  simple_kafka_consumer.rs  transform_hdd_deduplication.rs  transform_jdd_normalisation.rs
crates/libs/lib-etl/files/: HDD_deduplication_transformed.csv  HDD_deduplication_transformed_test.csv  JDD_normalisation.csv  JDD_normalisation_transformed.csv
crates/libs/lib-etl/src/: config.rs  csv.rs  kafka.rs  lib.rs  transforms.rs
crates/libs/lib-etl/src/schemas/: hdd.rs  jdd.rs
crates/libs/lib-etl/src/transforms/: ape.rs  civilite.rs  code_naf.rs  email.rs  libelle_naf.rs  nom.rs  pce.rs  prenom.rs  raison_sociale.rs  siren.rs  siret.rs  siret_successeur.rs  telephone.rs  utils.rs
crates/libs/lib-rpc-core/src/: lib.rs
crates/libs/lib-rpc-core/src/utils/: macro_utils.rs
crates/libs/lib-utils/src/: b64.rs  envs.rs  time.rs
crates/libs/lib-web/src/: lib.rs
crates/services/web-server/: Cargo.toml
crates/services/web-server/src/web/rpcs/: agent_rpc.rs  conv_rpc.rs
crates/tools/gen-key/: Cargo.toml
crates/tools/gen-key/src/: main.rs
examples/: csv_hdd_to_postgres.rs  csv_jdd_to_kafka.rs  csv_jdd_to_postgres.rs  csv_to_kafka.rs  csv_to_postgres.rs  kafka_jdd_to_mongo.rs  kafka_to_mongo.rs  simple_kafka_consumer.rs  transform_hdd_deduplication.rs  transform_jdd_deduplication.rs  transform_jdd_normalisation.rs
files/: HDD_deduplication_transformed.csv  JDD_deduplication.csv  JDD_normalisation.csv  JDD_normalisation_transformed.csv
kafka-ui/: config.yml
sql/dev_initial/: 00-recreate-db.sql  01-create-schema.sql  02-dev-seed.sql
src/: config.rs  csv_processor.rs  jdd.rs  lib.rs  schemas.rs  transforms.rs
src/jdd/: config.rs  schema.rs  transforms.rs
src/jdd/transforms/: ape.rs  civilite.rs  code_naf.rs  email.rs  libelle_naf.rs  nom.rs  prenom.rs  raison_sociale.rs  siren.rs  siret.rs  telephone.rs  utils.rs
src/schemas/: hdd.rs  jdd.rs
src/transforms/: libelle_naf.rs  pce.rs  prenom.rs  siret_successeur.rs  utils.rs
