[workspace]
members = [
  "crates/libs/lib-etl",
  "crates/libs/lib-utils",
  "crates/libs/lib-rpc-core",
  "crates/libs/lib-auth",
  "crates/libs/lib-core",
  "crates/libs/lib-web",
  "crates/services/web-server",
  "crates/tools/gen-key",
]
resolver = "2"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.dependencies]
serde_with = { version = "3", features = ["time_0_3"] }
modql = { version = "0.4.1", features = ["with-sea-query"] }
sqlx = { version = "0.8", features = [
  "postgres",
  "macros",
  "uuid",
  "runtime-tokio",
] }
sea-query = "0.32"
sea-query-binder = { version = "0.7", features = [
  "sqlx-postgres",
  "with-uuid",
  "with-time",
] }
rpc-router = { version = "=0.1.3" }
# -- Web
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["fs"] }
tower-cookies = "0.11"
# -- Others
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
derive_more = { version = "1.0.0-beta", features = ["from", "display"] }
