[package]
name = "lib-core"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
lib-utils = { path = "../lib-utils" }
lib-auth = { path = "../lib-auth" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
derive_more = { workspace = true }
serde_with = { workspace = true }
sqlx = { workspace = true }

[lints]
workspace = true
