[package]
name = "lib-core"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[features]
with-rpc = ["rpc-router"]

[dependencies]
lib-utils = { path = "../lib-utils" }
lib-auth = { path = "../lib-auth" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
derive_more = { workspace = true }
serde_with = { workspace = true }
sqlx = { workspace = true }
sea-query = { workspace = true }
sea-query-binder = { workspace = true }
modql = { workspace = true }
time = { workspace = true }
tracing = "0.1"
rpc-router = { workspace = true, optional = true }

[dev-dependencies]
serial_test = "3"

[lints]
workspace = true
