[package]
name = "lib-data-processing"
version = "0.1.0"
edition = "2021"

[lib]
name = "lib_data_processing"
crate-type = ["cdylib", "lib"]

[lints]
workspace = true

[dependencies]
tokio = { version = "1.38", features = ["rt-multi-thread", "sync", "macros"] }
rdkafka = { version = "0.36", features = ["cmake-build"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
notify = "6.1"
csv = "1.3"
env_logger = "0.11"
mongodb = "3"
sqlx = { workspace = true }
polars = { version = "0.43", features = [
  "lazy",
  "rows",
  "strings",
  "regex",
  "concat_str",
  "cross_join",
  "list_sets",
  "semi_anti_join",
  "is_in",
  "polars-ops",
  "rank",
] }
polars-ops = "0.43.1"
sea-query = "0.31"
sea-query-binder = { version = "0.6.0", features = ["sqlx-postgres"] }
regex = "1.10"
lazy_static = "1.5"
unidecode = "0.3"
rayon = "1.10.0"

[dev-dependencies]
clap = "4.5"
dotenv = "0.15"                                                # or the latest version
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "transform_benchmark"
harness = false
