[package]
name = "web-server"
version = "0.1.0"
edition = "2021"

[dependencies]
lib-utils = { path = "../../libs/lib-utils" }
lib-core = { path = "../../libs/lib-core", features = ["with-rpc"] }
lib-auth = { path = "../../libs/lib-auth" }
lib-rpc-core = { path = "../../libs/lib-rpc-core" }
lib-web = { path = "../../libs/lib-web" }

tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tower-cookies = { workspace = true }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rpc-router = { workspace = true }
time = { workspace = true }
uuid = { version = "1", features = ["v4", "fast-rng"] }
strum_macros = "0.26"
derive_more = { workspace = true }

[dev-dependencies]
httpc-test = "0.1"
